# pyensmallen-tmp

./: README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: build.yml
pyensmallen/: module.cpp  newton_type.hpp  report.hpp
