[build-system]
requires = [
    "setuptools >=42",
    "wheel",
    "pybind11>=2.4",
    "meson-python",
    "numpy",
]
build-backend = "mesonpy"

[tool.cibuildwheel]
skip = ["cp36-*", "*-win32", "*-manylinux_i686"]
#build = ["cp310-manylinux_x86_64"]
build = ["cp310-manylinux_x86_64","cp311-manylinux_x86_64","cp312-manylinux_x86_64"]
before-build = """

    pip install ninja

    # Install jax and jaxlib if required
    pip install jax jaxlib

    if [ ! -d armadillo-code ]; then git clone https://gitlab.com/conradsnicta/armadillo-code.git; fi
    cd armadillo-code
    mkdir -p build && cd build
    cmake .. -DCMAKE_INSTALL_PREFIX=/project/deps
    make -j$(nproc)
    make install
    cd ../..

    if [ ! -d ensmallen ]; then git clone https://github.com/mlpack/ensmallen.git; fi
    cd ensmallen
    mkdir -p build && cd build
    cmake .. -DCMAKE_INSTALL_PREFIX=/project/deps
    make -j$(nproc)
    make install
    cd ../..
"""
environment = { CMAKE_PREFIX_PATH = "/project/deps" }

[project]
name = 'pyensmallen_experimental'
version = '0.2.63'
description = 'Python bindings for the Ensmallen library.'
readme = 'README.md'
requires-python = '>=3.10'
license = { file = 'LICENSE.txt' }
authors = [
    { name = 'Apoorva Lal', email = 'lal.apoorva@gmail.com' },
    { name = 'Matthew Wardrop', email = 'mpwardrop@gmail.com' },
]
